Updates for Java 9 compat.